small fix for proper wrapping of image in view-project

--- a/views/stylesheets/view-project.styl
+++ b/views/stylesheets/view-project.styl
@@ -49,8 +49,8 @@
     h = 300px
     padding: 1px
     margin-left: 1em
-    width: w+@padding
-    height: h+@padding
+    max-width: w+@padding
+    max-height: h+@padding
     text-align: center
     img
       border-radius: 8px
